<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/activity_block_title" />
    <Spinner
            android:id="@+id/app_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/app_prompt"/>
    <Spinner
            android:id="@+id/activity_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/activity_prompt"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/actions_block_title"/>
    <Button
            android:id="@+id/test_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"/>
</LinearLayout>

